Fix footer & content overlapping on small screens

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ ul {
   max-width: 1320px;
   margin-right: auto;
   margin-left: auto;
+  padding-bottom: 2rem;
 }
 
 #carousel {
